add typewriter mode toggle

--- a/Typewriter/Base.lproj/Main.storyboard
+++ b/Typewriter/Base.lproj/Main.storyboard
@@ -596,6 +596,13 @@
                                                 <action selector="runToolbarCustomizationPalette:" target="Ady-hI-5gd" id="pQI-g3-MTW"/>
                                             </connections>
                                         </menuItem>
+                                        <menuItem isSeparatorItem="YES" id="x9G-6f-bIC"/>
+                                        <menuItem title="Toggle Typewriter Mode" keyEquivalent="t" id="cog-vf-I9y">
+                                            <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
+                                            <connections>
+                                                <action selector="toggleTypewriterMode:" target="Ady-hI-5gd" id="V5Z-H7-ky7"/>
+                                            </connections>
+                                        </menuItem>
                                         <menuItem isSeparatorItem="YES" id="hB3-LF-h0Y"/>
                                         <menuItem title="Show Sidebar" keyEquivalent="s" id="kIP-vf-haE">
                                             <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
